src/objects/Second_Tier_Advice__c.object
<CustomObject>
    <fields>
        <fullName>Advice_detail__c</fullName>
        <label>Advice detail</label>
        <picklist>
            <controllingField>Type_of_advice__c</controllingField>
            <picklistValues>
                <fullName>Mortgage Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt collection procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfair dismissal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redundancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobseeker’s Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobseeker’s Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domiciliary Care Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer’s Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Contributory Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Non-Contributory Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplementary Welfare Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceptional/Urgent Needs Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Interest Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternity Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Parent Family Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death Related Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back to Education/Student Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Social Welfare Payments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_from_organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call from organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Second Tier Advice</relationshipLabel>
        <relationshipName>Second_Tier_Advice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Second Tier Advice</relationshipLabel>
        <relationshipName>Second_Tier_Advice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_advice_given__c</fullName>
        <label>Date advice given</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_advice__c</fullName>
        <label>Details of advice</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_query__c</fullName>
        <label>Details of query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up__c</fullName>
        <label>Follow-up</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_to__c</fullName>
        <label>Referred to</label>
        <picklist>
            <picklistValues>
                <fullName>Cairde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizens Information Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crosscare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doras Luimni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigrant Council of Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Refugee Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrant Rights Centre of Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNHCR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_welfare_issue__c</fullName>
        <label>Social welfare issue</label>
        <picklist>
            <controllingField>Type_of_advice__c</controllingField>
            <picklistValues>
                <fullName>Applying for Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genuinely seeking work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available for work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redundancy and Insolvency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusal of payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension of Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery of Overpayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud/Prosecutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social welfare appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review by Deciding Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Appeals Officer’s Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom of Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/Civil Partner/Cohabitant’s Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving to or from Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claiming Benefits abroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maladministration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaints about Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ombudsman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_advice__c</fullName>
        <label>Type of advice</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Second Tier Advice</label>
    <listViews>
        <fullName>Advice_on_debt</fullName>
        <columns>NAME</columns>
        <columns>Advice_detail__c</columns>
        <columns>Details_of_query__c</columns>
        <columns>Referred_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_advice__c</field>
            <operation>equals</operation>
            <value>Debt</value>
        </filters>
        <label>Advice on debt</label>
    </listViews>
    <listViews>
        <fullName>Advice_on_employment</fullName>
        <columns>NAME</columns>
        <columns>Advice_detail__c</columns>
        <columns>Details_of_query__c</columns>
        <columns>Referred_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_advice__c</field>
            <operation>equals</operation>
            <value>Employment</value>
        </filters>
        <label>Advice on employment</label>
    </listViews>
    <listViews>
        <fullName>Advice_on_social_welfare</fullName>
        <columns>NAME</columns>
        <columns>Advice_detail__c</columns>
        <columns>Details_of_query__c</columns>
        <columns>Referred_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_advice__c</field>
            <operation>equals</operation>
            <value>Social Welfare</value>
        </filters>
        <label>Advice on social welfare</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_of_advice__c</columns>
        <columns>Advice_detail__c</columns>
        <columns>Referred_to__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STD-{00000}</displayFormat>
        <label>Second Tier Advice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Second Tier Advice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>